--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -82,6 +82,7 @@
       </mat-card-content>
       
       <mat-card-actions>
+        <p class="developer-credit">Desenvolvido por CC (IM) Siqueira Campos</p>
       </mat-card-actions>
     </mat-card>
   </div>
