--- a/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-conceitos/app6-geopolitica-relacoes-internacionais-conceitos.html
+++ b/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-conceitos/app6-geopolitica-relacoes-internacionais-conceitos.html
@@ -1,6 +1,11 @@
-<!-- Componente reutilizável de conceitos (sem header interno) -->
+<!-- Componente reutilizável de conceitos -->
 <app-conceitos
   [bibliografiaIds]="geopoliticaBibliografiaIds"
   [emptyMessage]="emptyMessage"
-  [showHeader]="false">
+  [showHeader]="true"
+  [moduleLabel]="moduleLabel"
+  [moduleEmoji]="moduleEmoji"
+  [flashcardsPath]="flashcardsPath"
+  [perguntasPath]="perguntasPath"
+  [backToBibliografiaPath]="backToBibliografiaPath">
 </app-conceitos>
