--- a/frontend-audita/src/app/pages/home/home.component.html
+++ b/frontend-audita/src/app/pages/home/home.component.html
@@ -16,8 +16,8 @@
         alt="Bandeira do Brasil" 
         class="brazil-flag-mobile"
         aria-hidden="true">
-      <span class="title">CEMOS</span>
-      <span class="subtitle">2028</span>
+      <span class="title">TCU</span>
+      <span class="subtitle">2029</span>
     </div>
     <button 
       mat-flat-button 
