--- a/frontend-audita/src/app/pages/home/home-landing/home-landing.component.html
+++ b/frontend-audita/src/app/pages/home/home-landing/home-landing.component.html
@@ -1,7 +1,7 @@
 <div class="landing-container">
   <div class="welcome-section">
     <div class="welcome-header">
-      <h1 class="main-title">Concursos 2026</h1>
+      <h1 class="main-title">Conteúdo TCU-2026</h1>
       <p class="subtitle">Sistema de estudos para aprovação em concursos</p>
     </div>
   </div>
