--- a/frontend-audita/src/app/pages/login/login.component.html
+++ b/frontend-audita/src/app/pages/login/login.component.html
@@ -11,7 +11,7 @@
         <div class="login-header">
           <div class="login-title-wrapper">
             <img src="/assets/img/svg/brazil.png" alt="Bandeira do Brasil" class="brazil-flag">
-            <span class="login-title">CONCURSOS</span>
+            <span class="login-title">TCU</span>
             <span class="login-subtitle">2026</span>
           </div>
         </div>
