--- a/frontend-audita/src/app/modules/app5-infra-ti/app5-infra-ti-bibliografia/app5-infra-ti-bibliografia.html
+++ b/frontend-audita/src/app/modules/app5-infra-ti/app5-infra-ti-bibliografia/app5-infra-ti-bibliografia.html
@@ -1,1 +1,13 @@
-<p>app5-infra-ti-bibliografia works!</p>
+<!-- Router Outlet para renderizar componentes filhos -->
+<router-outlet></router-outlet>
+
+<!-- Capa da Bibliografia - Exibida SOMENTE quando não há filho ativo -->
+<app-capa-bibliografia
+  *ngIf="showCapa"
+  [capas]="capas"
+  [markdownPath]="markdownPath"
+  [basePath]="basePath"
+  [conceitosPath]="conceitosPath"
+  [flashcardsPath]="flashcardsPath"
+  [perguntasPath]="perguntasPath">  
+</app-capa-bibliografia>
